# under_water_robot_ros2_gazebo

./: .clangd  PID_thrust_control.py  PID_thrust_control_saveData.py  Run_UnderWater_Robot.sdf  clean_gz_ros2.sh  pid_data_log.txt
model/: UnderWater_Robot.sdf
model/meshes/: base_link.STL  joint.STL
model/urdf/: UnderWater_Robot.csv  UnderWater_Robot.urdf
src/robot_plugin/: CMakeLists.txt  package.xml
src/robot_plugin/src/: torque_plugin.cpp
src/rov_interfaces/: CMakeLists.txt  package.xml
src/rov_interfaces/srv/: SetForce.srv  SetState.srv
src/thrust_controler/: CMakeLists.txt  package.xml
src/thrust_controler/include/: ThrustAllocationSolver.hpp
src/thrust_controler/src/: ThrustAllocationSolver.cpp  pubilsh_robot_state.cpp  thrust_controler.cpp
src/thrust_controler_server/: CMakeLists.txt  package.xml
src/thrust_controler_server/src/: ThrustAllocationSolver.cpp  pubilsh_robot_state.cpp  thrust_controler_server.cpp
src/under_water_robot/: package.xml  setup.cfg  setup.py
src/under_water_robot/config/: bridge_config.yaml
src/under_water_robot/launch/: run.launch.py
src/under_water_robot/under_water_robot/: depth_eso.py  get_state.py  thrust_control copy.py  thrust_control.py
